--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Crate for dealing with primes
 primal = "0.3.2"
+# Cross plattform console clearer
 clearscreen = "2.0.1"
