--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2021"
 primal = "0.3.2"
 # Cross plattform console clearer
 clearscreen = "2.0.1"
+# For concurrent programming
+rayon = "1.7.0"
