--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ primal = "0.3.2"
 clearscreen = "2.0.1"
 # For concurrent programming
 rayon = "1.7.0"
+# For printing numbers with thousand seperators
+thousands = "0.2.0"
